--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  dio: ^5.8.0+1
+  get: 4.6.6
+  timezone: ^0.10.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
