--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: 4.6.6
   timezone: ^0.10.1
   intl: ^0.20.2
+  google_maps_flutter: ^2.10.1
 
 dev_dependencies:
   flutter_test:
